--- a/sehrim.html
+++ b/sehrim.html
@@ -28,7 +28,7 @@
              <div class="col-11 container">
                <ul class="navbar-nav me-6 mb-lg-0">
                 <li class="nav-item me-3">
-                   <a class="nav-link active" aria-current="page" href="index.html">Hakkımda</a>
+                   <a class="nav-link " href="index.html">Hakkımda</a>
                 </li>
                 <li class="nav-item me-3">
                  <a class="nav-link" href="ozgecmis.html">Özgeçmiş</a>
@@ -37,10 +37,10 @@
                  <a class="nav-link" href="sehrim.html">Şehrim</a>
                </li>
                <li class="nav-item me-3">
-                  <a class="nav-link " href="takımım.html">Mirasımız</a>
+                  <a class="nav-link " href="takımım.html">Takımım</a>
                 </li>
                  <li class="nav-item me-3">
-                   <a class="nav-link" href="ilgialanlarim.html">İlgi Alanlarım</a>
+                   <a class="nav-link" href="İlgialanlarım.html">İlgi Alanlarım</a>
                  </li>
                 <li class="nav-item me-3">
                    <a class="nav-link" href="iletisim.html">İletişim</a>
@@ -61,7 +61,7 @@
     </div>
     <div  class="row flex justify-content-md-center" > 
       <div class="col-lg-7 col-md-9 col-sm-11 ">
-
+        <i><h1>ÇORUM</h1></i>
       <div class="swiper">
   
         <div class="swiper-wrapper">
@@ -162,9 +162,10 @@
 
       <div  class="row justify-content-md-center footer " > 
       <div class="col-sm-12 col-lg-6">
-        <footer class="text-center  "> 
-          <span>Web-tek 2021-2022 || Sakarya Üniversitesi </span>   
-            </footer>
+        <footer class="text-center text-white "> 
+          <span>Web-tek 2021-2022 || Sakarya Üniversitesi </span>  <br>
+          <span>Mail adresim => recep.ozbulut@ogr.sakarya.edu.tr</span> 
+        </footer>
        </div>
      </div>
 
