--- a/ozgecmis.html
+++ b/ozgecmis.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <meta name="description" content="Alperen Özbulut">
     <meta name="keywords" content="alperen,ozbulut,sakarya,çorum,html">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="main.js">
     <title>Eğitim Hayatım</title>
   </head>
@@ -45,7 +45,7 @@
                    <a class="nav-link" href="iletisim.html">İletişim</a>
                 </li>
                 <li class="nav-item me-3">
-                  <a class="nav-link" href="http://localhost/WEB/index.php">login</a>  
+                  <a class="nav-link" href="login.php">login</a>  
                </li>
              </ul>   
               
